fix: Header Alignment
Fix vertical alignment in header component

--- a/src/components/Header/style.module.css
+++ b/src/components/Header/style.module.css
@@ -1,4 +1,5 @@
 .header {
+  align-items: center;
   background-color: #fff;
   border-bottom: 1px solid #e8e8e8;
   display: flex;
